--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
+                        <p><span class="title-s">Name: </span> <span>Nidhi Jaju</span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                        <p><span class="title-s">Email: </span> <span><nidhijaju127@gmail class="com"></nidhijaju127@gmail></span></p>
+                        <p><span class="title-s">Phone: </span> <span>+44 7597 720819</span></p>
                       </div>
                     </div>
                   </div>
