testing some name changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DevFolio Bootstrap Portfolio Template - Index</title>
+  <title>Nidhi Jaju</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -37,7 +37,7 @@
   <!-- ======= Header/ Navbar ======= -->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">DevFolio</a>
+      <a class="navbar-brand js-scroll" href="#page-top">Nidhi Jaju</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
         <span></span>
@@ -104,7 +104,7 @@
                         <p><span class="title-s">Name: </span> <span>Nidhi Jaju</span></p>
                         <p><span class="title-s">Profile: </span> <span>Full stack developer</span></p>
                         <p><span class="title-s">Email: </span> <span>nidhijaju127@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>+44 7597 720819</span></p>
+                        <!-- <p><span class="title-s">Phone: </span> <span>+44 7597 720819</span></p> -->
                       </div>
                     </div>
                   </div>
@@ -136,12 +136,17 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      I am a third year electronics and information engineering student at Imperial College London. I
+                      was born in India, but lived in Tokyo, Japan for all of my life and grew up there, before moving
+                      to London, UK for university. I was always interested in maths and sciences and after participating
+                      in the Conrad Spirit of Innovation Challenge in high school and going through the whole engineering
+                      process of desiging a renewable energy heater, I knew this was the field for me. I loved the whole
+                      prodcess of discussing, planning, and pitching to testing, prototyping, and finally having a final
+                      product and seeing it all come to life before my eyes.
                     </p>
                     <p class="lead">
+                      Since coming to university, I have gained a lot of experience in the general software engineering
+                      such as by learning C++ and ARM Assembly language in my first year. I have 
                       Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
                       porttitor volutpat. Vestibulum
                       ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
@@ -167,9 +172,11 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+                Work Experience
               </h3>
-              <p class="subtitle-a">
+              <p class="subtitle-a"></p>
+                Since joining university, I have undertaken some internships during my summer breaks especially
+                to give me some practical hands-on experience. Th 
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               </p>
               <div class="line-mf"></div>
@@ -186,7 +193,7 @@
                 <h2 class="s-title">Web Design</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
+                  provident vitae! Magnifici
                   tempora perferendis eum non provident.
                 </p>
               </div>
@@ -741,7 +748,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Nidhi Jaju</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
