--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon-2.png" rel="icon">
+  <link href="assets/img/favicon-2.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,20 +96,20 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/profile-1.JPG" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Nidhi Jaju</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Full stack developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Software Engineer</span></p>
                         <p><span class="title-s">Email: </span> <span>nidhijaju127@gmail.com</span></p>
                         <!-- <p><span class="title-s">Phone: </span> <span>+44 7597 720819</span></p> -->
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
+                    <p class="title-s">Technical Skills</p>
                     <span>C++</span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -125,6 +125,14 @@
                     <span>ARM Assembly</span> <span class="pull-right">60%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>F#</span> <span class="pull-right">40%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>SQL</span> <span class="pull-right">30%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -145,7 +153,9 @@
                       product and seeing it all come to life before my eyes.
                     </p>
                     <p class="lead">
-                      Since coming to university, I have gained a lot of experience in the general software engineering
+                      Since coming to university, I have gained a lot more in depth experience with both high level
+                      software engineering 
+                      experience in the general software engineering
                       such as by learning C++ and ARM Assembly language in my first year. I have 
                       Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
                       porttitor volutpat. Vestibulum
