fixing layout stuff

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <!-- resume Section ================================================== -->
     <section id="resume" class="grey-section">
 
-      <div class="row section-intro">
+      <!-- <div class="row section-intro">
         <div class="col-twelve">
 
           <h5>RESUME</h5>
@@ -210,7 +210,7 @@
           <p class="lead"></p>
 
         </div>   		
-      </div> <!-- /section-intro--> 
+      </div> /section-intro  -->
 
       <div class="row resume-timeline">
 
@@ -1006,11 +1006,11 @@
             </div>
           </div>
         </div>
-      </div> --> -->
+      </div> -->
     <!-- </section>End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/fuji-contact.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -1063,13 +1063,13 @@
                       </form>
                     </div>
                   </div> -->
-                  <div class="col-md-6">
+                  <div class="col-md-10">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
                         Get in Touch
                       </h5>
                     </div>
-                    <div class="more-info">
+                    <!-- <div class="more-info"> -->
                       <p class="lead">
                         Please feel free to reach out to me if you would like to connect about future oppotunities.
                         I am always up to have any exciting conversations as well!
@@ -1078,8 +1078,10 @@
                         <li><span class="ion-ios-telephone"></span> (617) 557-0089</li> -->
                         <li><span class="ion-email"></span> <a href="mailto:nidhijaju127@gmail.com">nidhijaju127@gmail.com</li>
                       </ul>
+                      <!-- <br> -->
                     </div>
                     <div class="socials">
+                      <!-- <br> -->
                       <ul>
                         <li><a href="https://www.linkedin.com/in/nidhijaju/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                         <li><a href="https://github.com/nidhijaju"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
@@ -1090,7 +1092,7 @@
                         <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li> -->
                       </ul>
                     </div>
-                  </div>
+                  <!-- </div> -->
                 </div>
               </div>
             </div>
