--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="Nidhi Jaju" name="author">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon-2.png" rel="icon">
-  <link href="assets/img/favicon-2.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon-new.png" rel="icon">
+  <link href="assets/img/apple-touch-icon-new.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="index.html">Home</a>
+            <a class="nav-link js-scroll active" href="#page-top">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
@@ -170,7 +170,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a third year Electronics and Information engineering student at Imperial College London. I
+                      I am a third year Electronic and Information Engineering student at Imperial College London. I
                       was born in India, and lived in Tokyo for all of my life and grew up there, before moving
                       to London for university. I was always interested in maths and sciences and after participating
                       in the Conrad Spirit of Innovation Challenge in high school and going through the whole engineering
@@ -303,7 +303,7 @@
               <div class="timeline-content">
                 <h4>Summer Intern</h4>
                 <p>Worked together with Japanese university students to plan and propose a solution that utilizes
-                  ICT for future Japan and present it to the senior employees of the affiliated companies of Fujitsu</p>
+                  ICT for future Japan and present it to the senior employees of the affiliated companies of Fujitsu.</p>
               </div>
 
             </div> <!-- /timeline-block -->
@@ -323,7 +323,7 @@
               <div class="timeline-content">
                 <h4>IoT Summer Intern</h4>
                 <p>Worked with other Japanese university students to design and build an IoT system using an Arduino, 
-                  M2M router, and touch, light, and human sensors, and presented at every step of the design process to the IoT team</p>
+                  M2M router, and touch, light, and human sensors, and presented at every step of the design process to the IoT team.</p>
               </div>
 
             </div> <!-- /timeline-block -->
@@ -364,7 +364,7 @@
               <div class="timeline-content">
                 <h4>Summer Research Intern</h4>
                 <p>2-week international high school students internship programme at the Induction Motors Laboratory in the
-                  Department of Electrical Engineering at the Shibaura Institute of Technology</p>
+                  Department of Electrical Engineering at the Shibaura Institute of Technology.</p>
               </div>
 
             </div> <!-- /timeline-block -->
@@ -611,8 +611,9 @@
                 <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">15</p>
-                <span class="counter-text">YEARS OF EXPERIENCE</span>
+                <p class="counter">3</p>
+                <span class="counter-text">FLUENT LANGUAGES</span>
+                <p class="counter-subtext">(English, Japanese, Hindi)</p>
               </div>
             </div>
           </div>
@@ -622,8 +623,8 @@
                 <span class="ico-circle"><i class="ion-ios-people"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">550</p>
-                <span class="counter-text">TOTAL CLIENTS</span>
+                <p class="counter">7</p>
+                <span class="counter-text">COMPANIES</span>
               </div>
             </div>
           </div>
@@ -643,8 +644,8 @@
     </div><!-- End Counter Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="projects" class="portfolio-mf sect-pt4 route">
-      <div class="container">
+    <section class="portfolio-mf sect-pt4 route">
+      <div id="projects" class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
@@ -661,9 +662,33 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/NLP.jpeg" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/chrome-project.jpg" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/NLP.jpeg" alt="" class="img-fluid">
+                  <img src="assets/img/chrome-project.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Chromium Project Contributions</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Open-source, Software Engineering</span> / <span class="w-date">July 2020</span>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/hlp-project.JPG" data-gall="portfolioGallery" class="venobox">
+                <div class="work-img">
+                  <img src="assets/img/hlp-project.JPG" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -685,9 +710,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/mumono.JPG" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/mumono-project.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/mumono.JPG" alt="" class="img-fluid">
+                  <img src="assets/img/mumono-project.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -709,9 +734,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/compiler-project.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/compiler-project.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -733,9 +758,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/mips.jpeg" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/mips-project.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/mips.jpeg" alt="" class="img-fluid">
+                  <img src="assets/img/mips-project.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -757,14 +782,14 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/fpga.JPG" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/fpga-project.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/fpga.JPG" alt="" class="img-fluid">
+                  <img src="assets/img/fpga-project.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Virtual In-Air Keyboard</h2>
+                      <h2 class="w-title">SwypeKey (Virtual In-Air Keyboard)</h2>
                       <div class="w-more">
                         <span class="w-ctegory">FPGA Design</span> / <span class="w-date">May 2018</span>
                       </div>
@@ -781,14 +806,14 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/mastermind.png" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/mastermind-project.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/mastermind.png" alt="" class="img-fluid">
+                  <img src="assets/img/mastermind-project.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Mastermind</h2>
+                      <h2 class="w-title">Mastermind Solver</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Gaming Algorithms, Software Engineering</span> / <span class="w-date">March 2018</span>
                       </div>
@@ -805,9 +830,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/2048.png" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/2048-project.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/2048.png" alt="" class="img-fluid">
+                  <img src="assets/img/2048-project.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -829,9 +854,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/nasa.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/img/nasa-project.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/img/nasa.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/nasa-project.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -1063,7 +1088,7 @@
                       </form>
                     </div>
                   </div> -->
-                  <div class="col-md-10">
+                  <div class="col-md-8">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
                         Get in Touch
@@ -1079,9 +1104,12 @@
                         <li><span class="ion-email"></span> <a href="mailto:nidhijaju127@gmail.com">nidhijaju127@gmail.com</li>
                       </ul>
                       <!-- <br> -->
-                    </div>
+                    <!-- </div> -->
+                  </div>
+                  <div class="col-md-4">
                     <div class="socials">
-                      <!-- <br> -->
+                      <br>
+                      <br>
                       <ul>
                         <li><a href="https://www.linkedin.com/in/nidhijaju/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                         <li><a href="https://github.com/nidhijaju"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
@@ -1092,7 +1120,8 @@
                         <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li> -->
                       </ul>
                     </div>
-                  <!-- </div> -->
+
+                  </div>
                 </div>
               </div>
             </div>
@@ -1109,7 +1138,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>Nidhi Jaju</strong>. All Rights Reserved</p>
+            <p class="copyright"> Copyright &copy; 2020 <strong>Nidhi Jaju</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
